--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <main>
-        <section>
-            <div class="container">
-            <input class="input" type="text" placeholder="Еnter text">
-            <button class="btn">Submit</button>
+      <section>
+        <div class="container">
+          <input id="textInput" type="text" placeholder="Введіть текст" />
+          <button class="btn" onclick="displayText()">Застосувати</button>
+          <div id="output"></div>
         </div>
-        </section>
+      </section>
     </main>
 
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
